--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,4 +1,4 @@
-<head th:fragment="head" >
+<head th:fragment="head">
 <meta charset="utf-8">
 <title>Insert title here</title>
 <link rel="stylesheet"
@@ -21,10 +21,31 @@
 </style>
 </head>
 
-<div th:fragment="logo" class="logo-container mb-3 p-3 d-flex justify-content-between">
-		<span class="logo">mudi</span> <span class="mt-3">login</span>
+<div th:fragment="logo" class="">
+	<div class="row logo-container p-3 d-flex justify-content-between">
+
+		<span class="logo ml-2">mudi</span> <span class="mt-3 mr-2"> <a
+			href="/login" class="text-light" sec:authorize="!isAuthenticated()">
+				login</a> <a onclick="document.querySelector('#form-login').submit()"
+			href="#" class="text-light" sec:authorize="isAuthenticated()">
+				logout</a>
+			<form id="form-login" th:action="@{/logout}" method="post"></form>
+		</span>
+
 	</div>
-	
-<div th:fragment="titulo(valor)" class="jumbotron mb-0">
-			<h1 class="display-4" th:text="${valor}" ></h1>
+
+	<div class="row " sec:authorize="isAuthenticated()" >
+		<div class="col">
+		<nav class="nav">
+		  <a class="nav-link" th:href="@{/home}">Home</a>
+		  <a class="nav-link" th:href="@{/usuario/pedido}">Meus Pedidos</a>
+		  <a class="nav-link" th:href="@{/oferta}">Faça sua Oferta</a>
+		</nav>
 		</div>
+	</div>
+
+</div>
+
+<div th:fragment="titulo(valor)" class="jumbotron mt-2">
+	<h1 class="display-4" th:text="${valor}"></h1>
+</div>
