--- a/src/main/resources/templates/pedido/formulario.html
+++ b/src/main/resources/templates/pedido/formulario.html
@@ -9,7 +9,7 @@
 				<div th:replace="~{base :: titulo('Novo Pedido')}" ></div>
 
 		<div class="card mt-4">
-			<form th:object="${requisicaoNovoPedido}" class="card-body" action="/pedido/novo" method="POST">
+			<form th:object="${requisicaoNovoPedido}" class="card-body" th:action="@{/pedido/novo}" method="POST">
 				<div class="form-group">
 					<label for="nomeProduto">Produto</label> 
 					<input th:field="*{nomeProduto}"
